--- a/src/main/resources/templates/GetAll.html
+++ b/src/main/resources/templates/GetAll.html
@@ -7,29 +7,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/getAll.css}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <style>
-        .gradient-custom {
-            background: linear-gradient(
-                90deg,
-                rgba(2, 0, 36, 1) 0%,
-                rgba(9, 9, 121, 1) 35%,
-                rgba(0, 212, 255, 1 ) 100%
-            );
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-
-        .form-check-input {
-            background-color: #212529;
-            border: 2px solid #6c757d;
-        }
-
-        .form-check-input:checked {
-            background-color: #0d6efd;
-            border-color: #0d6efd;
-        }
-    </style>
+    
 
 </head>
 <body class="gradient-custom">
@@ -57,7 +38,8 @@
                 <tr>
                     <th>Acciones</th>
                     <th>Datos Personales</th>
-                    <th>Cuenta</th>
+                    <th>Foto de Perfil</th>
+                    <th>Contacto</th>
                     <th>Direcciones</th>
                 </tr>
             </thead>
@@ -65,36 +47,128 @@
                 <tr th:each="usuario : ${usuarios}">
 
                     <td>
-                        <a th:href="@{/Usuario/Formulario(id=${usuario.idUsuario})}" class="btn btn-warning btn-sm">
+                        <button type="button"
+                                class="btn btn-warning btn-sm btnEditar"
+                                data-bs-toggle="modal"
+                                data-bs-target="#modalEditarUsuario"
+                                th:data-id="${usuario.idUsuario}"
+                                th:data-nombre="${usuario.nombre}"
+                                th:data-apellidoPaterno="${usuario.apellidoPaterno}"
+                                th:data-apellidoMaterno="${usuario.apellidosMaterno}"
+                                th:data-fechaNacimiento="${#dates.format(usuario.fechaNacimiento, 'yyyy-MM-dd')}"
+                                th:data-email="${usuario.email}"
+                                th:data-telefono="${usuario.telefono}"
+                                th:data-celular="${usuario.celular}"
+                                th:data-username="${usuario.userName}"
+                                th:data-curp="${usuario.CURP}"
+                                th:data-sexo="${usuario.sexo}">
                             <i class="bi bi-pencil-square"></i>
-                        </a>
+                        </button>
+
                         <button class="btn btn-danger btn-sm">
                             <i class="bi bi-trash"></i>
                         </button>
+                        
                     </td>
 
                     <td class="text-start">
                         <strong th:text="|${usuario.nombre} ${usuario.apellidoPaterno} ${usuario.apellidosMaterno}|"></strong><br>
-                        <span>Tel: <span th:text="${usuario.telefono}"></span></span><br>
-                        <span>Cel: <span th:text="${usuario.celular}"></span></span><br>
-                        <span>Email: <span th:text="${usuario.email}"></span></span><br>
-                        <span>Fecha Nac.: <span th:text="${#dates.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></span></span><br>
-                        <span>Sexo: <span th:text="${usuario.sexo}"></span></span><br>
-                        <span>CURP: <span th:text="${usuario.CURP}"></span></span><br>
+                        <span>📅Fec. Nacimiento: <span th:text="${#dates.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></span></span><br>
+                        <span>👥Sexo: <span th:text="${usuario.sexo}"></span></span><br>
+                        <span>💳CURP: <span th:text="${usuario.CURP}"></span></span><br>
                         <span th:if="${usuario.Rol != null and usuario.Rol.NombreRol != null and !#strings.isEmpty(usuario.Rol.NombreRol)}">Role: <span th:text="${usuario.Rol.NombreRol}"></span></span>
                     </td>
 
                     <td class="text-start">
-                        <span>Username: <span th:text="${usuario.userName}"></span></span><br>
-                        <span>Password: <span th:text="${usuario.password}"></span></span>
+                        <div class="position-relative d-inline-block overflow-hidden rounded-circle"
+                            style="width:150px; height:150px;">
+
+                            <img id="previewFoto"
+                                th:if="*{usuario.foto != null}"
+                                th:src="*{usuario.foto}"
+                                class="w-100 h-100"
+                                style="object-fit:cover;">
+
+                            <div id="iconoDefault"
+                                th:if="*{usuario.foto == null}"
+                                class="d-flex align-items-center justify-content-center w-100 h-100"
+                                style="background-color:#f8f9fa;">
+                                <i class="bi bi-person-bounding-box" style="font-size:80px; color:#6c757d;"></i>
+                            </div>
+
+                        </div>
+                        <div class="mt-6 text-end">
+                                <a class="btn btn-success btn-sm me-1">
+                                    <i class="bi bi-camera"></i>
+                                </a>
+                            </div>
                     </td>
 
                     <td class="text-start">
-                        <ul class="list-unstyled mb-0">
-                            <li th:each="direccion : ${usuario.direccion}" 
-                                th:text="|${direccion.calle}, No. Exterior: ${direccion.numeroExterior}, No. Interior: ${direccion.numeroIInteriori}, Colonia: ${direccion.colonia.nombre}, Codigo Postal: ${direccion.colonia.CodigoPostal}, Municipio: ${direccion.colonia.municipio.nombre}, Estado: ${direccion.colonia.municipio.estado.nombre}, País: ${direccion.colonia.municipio.estado.pais.nombre}|">
-                            </li>
-                        </ul>
+                        <span>📞Tel: <span th:text="${usuario.telefono}"></span></span><br>
+                        <span>📱Cel: <span th:text="${usuario.celular}"></span></span><br>
+                        <span>📩Email: <span th:text="${usuario.email}"></span></span><br>
+                        <span>👤Username: <span th:text="${usuario.userName}"></span></span><br>
+                    </td>
+
+                    <td class="text-start">
+                        <div th:if="${#lists.isEmpty(usuario.direccion)}" class="text-muted">
+                            Sin direcciones registradas
+                        </div>
+
+                        <div th:each="direccion : ${usuario.direccion}" 
+                            class="card mb-2 shadow-sm border-0">
+
+                            <div class="card-body p-2 small">
+
+                                <strong th:text="${direccion.calle}"></strong><br>
+
+                                <span>
+                                    No. Ext: <span th:text="${direccion.numeroExterior}"></span>,
+                                    No. Int: <span th:text="${direccion.numeroIInteriori}"></span>
+                                </span>
+                                <br>
+
+                                <span>
+                                    <span th:text="${direccion.colonia.nombre}"></span>,
+                                    CP: <span th:text="${direccion.colonia.codigoPostal}"></span>
+                                </span>
+                                <br>
+
+                                <span>
+                                    <span th:text="${direccion.colonia.municipio.nombre}"></span>,
+                                    <span th:text="${direccion.colonia.municipio.estado.nombre}"></span>,
+                                    <span th:text="${direccion.colonia.municipio.estado.pais.nombre}"></span>
+                                </span>
+
+                                <div class="mt-2 text-end">
+
+                                    <a href="#"
+                                        class="btn btn-warning btn-sm btnEditarDireccion"
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#modalEditarDireccion"
+                                        th:data-id="${direccion.idDireccion}"
+                                        th:data-idusuario="${usuario.idUsuario}"
+                                        th:data-calle="${direccion.calle}"
+                                        th:data-noext="${direccion.numeroExterior}"
+                                        th:data-noint="${direccion.NumeroIInteriori}"
+                                        th:data-colonia="${direccion.colonia.nombre}"
+                                        th:data-cp="${direccion.colonia.codigoPostal}"
+                                        th:data-municipio="${direccion.colonia.municipio.nombre}"
+                                        th:data-estado="${direccion.colonia.municipio.estado.nombre}"
+                                        th:data-pais="${direccion.colonia.municipio.estado.pais.nombre}">
+                                        <i class="bi bi-pencil"></i>
+                                    </a>
+
+                                    <button class="btn btn-danger btn-sm">
+                                        <i class="bi bi-trash"></i>
+                                    </button>
+
+
+                                </div>
+
+                            </div>
+                        </div>
                     </td>
 
                 </tr>
@@ -102,8 +176,218 @@
         </table>
     </div>
 
-
 </div>
+
+<script th:if="${abrirModalUsuario}">
+    document.addEventListener("DOMContentLoaded", function() {
+        var modalUsuario = new bootstrap.Modal(document.getElementById('modalEditarUsuario'));
+        modalUsuario.show();
+    });
+</script>
+
+
+
+<div class="modal fade" id="modalEditarUsuario" tabindex="-1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+
+      <form method="post"
+            th:action="@{/Usuario/form}"
+            enctype="multipart/form-data">
+
+        <div class="modal-header bg-warning">
+          <h5 class="modal-title">Editar Usuario</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <div class="modal-body">
+
+          <input type="hidden" name="idUsuario" id="editIdUsuario">
+
+          <div class="row g-3">
+
+            <div class="col-md-6">
+              <label class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="editNombre" name="nombre">
+              <span id="errorNombreUsuario" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+            </div>
+
+            <div class="col-md-6">
+                <label class="form-label">Nombre</label>
+                <input type="text" class="form-control" th:field="*{nombre}" id="editNombre">
+                <div class="text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+            </div>
+
+
+            <div class="col-md-6">
+              <label class="form-label">Apellido Paterno</label>
+              <input type="text" class="form-control" id="editApellidoPaterno" name="apellidoPaterno">
+              <span id="errorApellidoPaterno" th:if="${#fields.hasErrors('apellidoPaterno')}" th:errors="*{apellidoPaterno}" style="color: red"></span>
+            </div>
+
+            <div class="col-md-6">
+              <label class="form-label">Apellido Materno</label>
+              <input type="text" class="form-control" id="editApellidoMaterno" name="apellidosMaterno">
+              <span id="errorApellidosMaterno" th:if="${#fields.hasErrors('apellidosMaterno')}" th:errors="*{apellidosMaterno}" style="color: red"></span>
+            </div>
+
+            <div class="col-md-6">
+              <label class="form-label">Fecha de nacimiento</label>
+              <input type="date" class="form-control" id="editFechaNacimiento" name="fechaNacimiento">
+              <span id="errorFechaNacimiento" th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}" style="color:red"></span>
+            </div>
+
+            <div class="col-md-6">
+            <label class="form-label">CURP</label>
+            <input type="text" class="form-control" id="editCurp" name="CURP">
+            <span id="errorCURP" th:if="${#fields.hasErrors('CURP')}" th:errors="*{CURP}" style="color:red"></span>
+            </div>
+
+            <div class="col-md-6">
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" id="editEmail" name="email">
+              <span id="errorEmail" th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color:red"></span>
+            </div>
+
+            <div class="col-md-6">
+                <label class="form-label d-block">Sexo</label>
+
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="sexo" id="sexoM" value="M">
+                    <label class="form-check-label" for="sexoM">Masculino</label>
+                </div>
+
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="sexo" id="sexoF" value="F">
+                    <label class="form-check-label" for="sexoF">Femenino</label>
+                </div>
+                <div class="invalid-feedback d-block">
+                    <span th:if="${#fields.hasErrors('sexo')}"
+                        th:errors="*{sexo}"></span>
+                </div>
+
+            </div>
+
+            <div class="col-md-6">
+            <label class="form-label">Teléfono</label>
+            <input type="text"  class="form-control" id="editTelefono" name="telefono">
+            <span id="errorTelefono" th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}" style="color:red"></span>
+            </div>
+
+            <div class="col-md-6">
+            <label class="form-label">Celular</label>
+            <input type="text" class="form-control" id="editCelular" name="celular">
+            <span id="errorCelular" th:if="${#fields.hasErrors('celular')}" th:errors="*{celular}" style="color:red"></span>
+            </div>
+
+            <div class="col-md-6">
+            <label class="form-label">Username</label>
+            <input type="text" class="form-control"  id="editUsername" name="userName" th:field="*{userName}" oncopy="return false" onpaste="return false" oncut="return false" onblur="ValidarUsername(this)" required>
+            </div>
+
+            <div class="col-md-6">
+                <label class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="editPassword" name="password" placeholder="Dejar vacío si no desea cambiar">
+                <span id="errorPassword" th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color:red"></span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="modal-footer">
+          <button type="submit"
+                  class="btn btn-success">
+              Guardar Cambios
+          </button>
+
+          <button type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal">
+              Cancelar
+          </button>
+        </div>
+
+      </form>
+
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="modalEditarDireccion" tabindex="-1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+
+      <form method="post" th:action="@{/Direccion/Guardar}">
+        
+        <input type="hidden" name="idUsuario" id="direccionIdUsuario">
+        <input type="hidden" name="idDireccion" id="direccionId">
+
+        <div class="modal-header bg-warning">
+          <h5 class="modal-title">Editar Dirección</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <div class="modal-body">
+          <div class="row g-3">
+
+            <div class="col-md-6">
+              <label class="form-label">Calle</label>
+              <input type="text" class="form-control" name="calle" id="direccionCalle">
+            </div>
+
+            <div class="col-md-3">
+              <label class="form-label">No. Exterior</label>
+              <input type="text" class="form-control" name="numeroExterior" id="direccionNoExt">
+            </div>
+
+            <div class="col-md-3">
+              <label class="form-label">No. Interior</label>
+              <input type="text" class="form-control" name="numeroIInteriori" id="direccionNoInt">
+            </div>
+
+            <div class="col-md-6">
+              <label class="form-label">Colonia</label>
+              <input type="text" class="form-control" name="colonia" id="direccionColonia">
+            </div>
+
+            <div class="col-md-6">
+              <label class="form-label">Código Postal</label>
+              <input type="text" class="form-control" name="codigoPostal" id="direccionCP">
+            </div>
+
+            <div class="col-md-4">
+              <label class="form-label">Municipio</label>
+              <input type="text" class="form-control" name="municipio" id="direccionMunicipio">
+            </div>
+
+            <div class="col-md-4">
+              <label class="form-label">Estado</label>
+              <input type="text" class="form-control" name="estado" id="direccionEstado">
+            </div>
+
+            <div class="col-md-4">
+              <label class="form-label">País</label>
+              <input type="text" class="form-control" name="pais" id="direccionPais">
+            </div>
+
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success">Guardar Cambios</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+<script th:src="@{/js/Modal.js}"></script>
 
 </body>
 </html>
