--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -6,32 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-    <style>
-        .gradient-custom {
-            background: linear-gradient(
-                90deg,
-                rgba(2, 0, 36, 1) 0%,
-                rgba(9, 9, 121, 1) 35%,
-                rgba(0, 212, 255, 1 ) 100%
-            );
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-
-        .form-check-input {
-            background-color: #212529;
-            border: 2px solid #6c757d;
-        }
-
-        .form-check-input:checked {
-            background-color: #0d6efd;
-            border-color: #0d6efd;
-        }
-    </style>
-
-
+    <link rel="stylesheet" th:href="@{/css/usuario.css}">
+    <script th:src="@{/js/usuario.js}"></script>
 </head>
 
 <body class="gradient-custom">
@@ -67,15 +45,16 @@
                                     style="width:150px; height:150px;">
 
                                     <img id="previewFoto"
-                                        src=""
+                                        th:if="*{foto != null}"
+                                        th:src="*{foto}"
                                         class="w-100 h-100"
-                                        style="object-fit:cover; display:none;">
+                                        style="object-fit:cover;">
 
                                     <div id="iconoDefault"
+                                        th:if="*{foto == null}"
                                         class="d-flex align-items-center justify-content-center w-100 h-100"
                                         style="background-color:#f8f9fa;">
-                                        <i class="bi bi-person-bounding-box"
-                                        style="font-size:80px; color:#6c757d;"></i>
+                                        <i class="bi bi-person-bounding-box" style="font-size:80px; color:#6c757d;"></i>
                                     </div>
 
                                 </div>
@@ -88,8 +67,6 @@
                                 </div>
 
                             </div>
-
-
 
                             <div class="col-md-4">
                                 <label for="NombreUsuario" class="form-label fw-bold">Nombre</label>
@@ -259,8 +236,8 @@
                                     
                                     
                                     <div class="col-md-3">
-                                        <label for="coloniaddl" class="form-label fw-bold" th:field="*{direccion[__${iterStat.index}__].colonia.idColonia}">Colonia</label>
-                                        <select id="ddlcolonia" class="form-select " aria-label="Default select example" >
+                                        <label for="coloniaddl" class="form-label fw-bold">Colonia</label>
+                                        <select id="ddlcolonia" class="form-select " aria-label="Default select example" th:field="*{direccion[__${iterStat.index}__].colonia.idColonia}">
                                             <option th:each="coloniaItem : ${colonias}" th:value="${coloniaItem.idColonia}" th:text="${coloniaItem.nombre}"value=0 selected>Selecciona una colonia</option>
                                         </select>
                                     </div>
@@ -299,405 +276,9 @@
 
 </div>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-
-        const input = document.getElementById("foto");
-        const preview = document.getElementById("previewFoto");
-        const icono = document.getElementById("iconoDefault");
-
-        input.addEventListener("change", function () {
-
-            console.log("Archivo seleccionado");
-
-            if (this.files && this.files.length > 0) {
-
-                const file = this.files[0];
-
-                // Validar que sea imagen
-                if (!file.type.startsWith("image/")) {
-                    alert("Por favor selecciona una imagen válida");
-                    return;
-                }
-
-                // Mostrar preview
-                const url = URL.createObjectURL(file);
-                preview.src = url;
-                preview.style.display = "block";
-                icono.style.display = "none";
-
-            } else {
-                preview.style.display = "none";
-                icono.style.display = "flex";
-            }
-
-        });
-
-    });
-</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/usuario.js}"></script>
 
 </body>
-
-<script>
-    
-    function SoloLetras(input, event){
-        console.log(input); 
-
-        var valorCompleto = $(input).val() + event.key;
-        console.log(valorCompleto);
-
-        console.log("ID:", input.id);
-
-        var regex = /^[a-zA-ZáéíóúÁÉÍÓÚñÑ\s]+$/;
-
-        if(regex.test(valorCompleto)){
-            console.log("Paso la expresion regular");
-            $("#error" + input.id).text('');
-            $(input).removeClass('border border-danger');
-        }else{
-            console.log("NO paso la expresion regular");
-            event.preventDefault();
-            $(input).addClass('border border-danger');
-            $("#error" + input.id).text('Solo letras').css('color','red');
-        }
-    }
-
-    function SoloLetrasBlur(input){
-        var regex = /^[a-zA-ZáéíóúÁÉÍÓÚñÑ\s]+$/;
-
-        if(regex.test($(input).val())){
-            console.log("Paso la expresion regular");
-            $("#error" + input.id).text('');
-            $(input).removeClass('border border-danger');
-            $(input).addClass('border border-success');
-        }
-    }
-
-    function ValidarEmail(input) {
-
-        var regex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-
-        if (regex.test($(input).val())) {
-            $("#errorEmail").text('');
-            $(input).removeClass('border border-danger');
-            $(input).addClass('border border-success');
-        } else {
-            $("#errorEmail").text('Email inválido').css('color', 'red');
-            $(input).removeClass('border border-success');
-            $(input).addClass('border border-danger');
-        }
-    }
-
-    function ValidarTelefono(input) {
-        var regex = /^[0-9]{10}$/;
-
-        if (regex.test($(input).val())) {
-            $("#errorTelefono").text('');
-            $(input).removeClass('border border-danger')
-                    .addClass('border border-success');
-        } else {
-            $("#errorTelefono").text('Debe contener 10 dígitos')
-                            .css('color', 'red');
-            $(input).removeClass('border border-success')
-                    .addClass('border border-danger');
-        }
-    }
-
-    function ValidarCURP(input) {
-        var regex = /^[A-Z]{4}[0-9]{6}[HM][A-Z]{5}[0-9A-Z]{2}$/;
-
-        if (regex.test($(input).val())) {
-            $("#errorCURP").text('');
-            $(input).removeClass('border border-danger')
-                    .addClass('border border-success');
-        } else {
-            $("#errorCURP").text('CURP inválida')
-                        .css('color', 'red');
-            $(input).removeClass('border border-success')
-                    .addClass('border border-danger');
-        }
-    }
-
-    function ValidarUsername(input) {
-        var regex = /^[a-zA-Z0-9]{4,20}$/;
-
-        if (regex.test($(input).val())) {
-            $("#errorUserName").text('');
-            $(input).removeClass('border border-danger')
-                    .addClass('border border-success');
-        } else {
-            $("#errorUserName").text('4-20 caracteres sin espacios')
-                            .css('color', 'red');
-            $(input).removeClass('border border-success')
-                    .addClass('border border-danger');
-        }
-    }
-
-    function ValidarPassword(input) { 
-
-        var regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&._-])[A-Za-z\d@$!%*?&._-]{8,16}$/;
-
-        if (regex.test($(input).val())) {
-            $("#errorPassword").text('');
-            $(input).removeClass('border border-danger')
-                    .addClass('border border-success');
-        } else {
-            $("#errorPassword")
-                .text('8-16 caracteres, 1 mayúscula, 1 minúscula, 1 número y 1 símbolo')
-                .css('color', 'red');
-
-            $(input).removeClass('border border-success')
-                    .addClass('border border-danger');
-        }
-    }
-
-    function ValidarFechaNacimiento(input) {
-
-        let fechaIngresada = new Date($(input).val());
-        let hoy = new Date();
-
-        if (!$(input).val()) {
-            $("#errorFecha").text("La fecha es obligatoria").css("color", "red");
-            $(input).removeClass('border border-success')
-                    .addClass('border border-danger');
-            return;
-        }
-
-        let edad = hoy.getFullYear() - fechaIngresada.getFullYear();
-        let mes = hoy.getMonth() - fechaIngresada.getMonth();
-
-        if (mes < 0 || (mes === 0 && hoy.getDate() < fechaIngresada.getDate())) {
-            edad--;
-        }
-
-        if (fechaIngresada > hoy) {
-            $("#errorFecha").text("No puede seleccionar una fecha futura")
-                            .css("color", "red");
-
-            $(input).removeClass('border border-success')
-                    .addClass('border border-danger');
-
-        } else if (edad < 18) {
-            $("#errorFecha").text("Debe ser mayor de 18 años")
-                            .css("color", "red");
-
-            $(input).removeClass('border border-success')
-                    .addClass('border border-danger');
-
-        } else {
-            $("#errorFecha").text("");
-
-            $(input).removeClass('border border-danger')
-                    .addClass('border border-success');
-        }
-    }
-
-    function ValidarSexo() {
-
-        let seleccionado = $("input[name='sexo']:checked").val();
-
-        if (!seleccionado) {
-
-            $("#errorSexo")
-                .text("Debe seleccionar una opción")
-                .css("color", "red");
-
-            $("input[name='sexo']")
-                .addClass("is-invalid");
-
-            return false;
-
-        } else {
-
-            $("#errorSexo").text("");
-
-            $("input[name='sexo']")
-                .removeClass("is-invalid");
-
-            return true;
-        }
-    }
-
-
-
-
-    $(document).ready(function () {
-
-        var cargandoDesdeCP = false;
-
-        console.log("Ya termine de cargar la página");
-
-        $("#ddlpais").change(function () {
-            console.log("Ya cambie");
-            var IdPais = $("#ddlpais").val();
-            if (IdPais != 0) {
-                $.ajax({
-                    url: "/Usuario/getEstadosByPais/" + IdPais, 
-                    type: "GET",
-                    dataType: 'json',
-                    success: function (data, textStatus, jqXHR) {
-                        console.log("Todo OK");
-                        $("#ddlestado").empty();
-                        $("#ddlmunicipio").empty();
-                        $("#ddlcolonia").empty();
-
-                        $("#ddlestado").append("<option value=0 selected>Selecciona un estado</option>");
-                        $("#ddlmunicipio").append("<option value=0 selected>Selecciona un municipio</option>");
-                        $("#ddlcolonia").append("<option value='0'>Selecciona colonia</option>");
-
-                        $("#codigoPostal").val("");
-
-                        $.each(data.objects, function (i, estado) {
-                            console.log(estado.Nombre)
-                            $("#ddlestado").append("<option value=" + estado.IdEstado + ">" + estado.Nombre + "</option>");
-                        });
-                    },
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        alert("No se pudo procesar la tarea");
-                    }
-                });
-            } else {
-                $("#ddlestado").empty();
-                $("#ddlestado").append("<option value=0 selected>Selecciona un estado</option>");
-            }
-
-
-        });
-
-        console.log("Ya carge estado ahora municipio");
-
-        $("#ddlestado").change(function () {
-            console.log("Ya cambie a estado");
-            var IdEstado = $("#ddlestado").val();
-            if (IdEstado != 0) {
-                $.ajax({
-                    url: "/Usuario/getMunicipioByEstado/" + IdEstado, 
-                    type: "GET",
-                    dataType: 'json',
-                    success: function (data, textStatus, jqXHR) {
-                        console.log("Todo OK");
-                        $("#ddlmunicipio").empty();
-                        $("#ddlmunicipio").append("<option value=0 selected>Selecciona un municipio</option>");
-
-                        $("#ddlcolonia").empty();
-                        $("#ddlcolonia").append("<option value='0'>Selecciona colonia</option>");
-
-                        $("#codigoPostal").val("");
-
-                        $.each(data.objects, function (i, municipio) {
-                            console.log(municipio.Nombre)
-                            $("#ddlmunicipio").append("<option value=" + municipio.IdMunicipio + ">" + municipio.Nombre + "</option>");
-                        });
-                    },
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        alert("No se pudo procesar la tarea");
-                    }
-                });
-            } else {
-                $("#ddlestado").empty();
-                $("#ddlestado").append("<option value=0 selected>Selecciona un municipio</option>");
-            }
-
-
-        });
-
-        console.log("Ya carge municipio ahora colonia");
-
-        $("#ddlmunicipio").change(function () {
-
-            var IdMunicipio = $("#ddlmunicipio").val();
-            if (IdMunicipio != 0) {
-                $.ajax({
-                    url: "/Usuario/getColoniaByMunicipios/" + IdMunicipio,
-                    type: "GET",
-                    dataType: 'json',
-                    success: function (data) {
-                        $("#ddlcolonia").empty();
-                        $("#ddlcolonia").append("<option value=0 selected>Selecciona una colonia</option>");
-
-                        $("#codigoPostal").val("");
-
-                        $.each(data.objects, function (i, colonia) {
-                            $("#ddlcolonia").append( "<option value='" + colonia.IdColonia + "' data-cp='" + colonia.CodigoPostal + "'>" + colonia.Nombre + "</option>");
-                        });
-                    },
-                    error: function () {
-                        alert("No se pudo procesar la tarea");
-                    }
-                });
-
-            }
-        });
-
-        console.log("Cargo CP y lleno direccion");
-
-        $("#ddlcolonia").change(function () {
-
-            var codigoPostal = $("#ddlcolonia option:selected").data("cp");
-
-            if (codigoPostal != undefined) {
-                $("#codigoPostal").val(codigoPostal);
-            } else {
-                $("#codigoPostal").val("");
-            }
-
-        });
-
-        $("#codigoPostal").blur(function () {
-
-            var cp = $(this).val();
-
-            if (cp.length == 5) {
-
-                cargandoDesdeCP = true; 
-
-                $.ajax({
-                    url: "/Usuario/getDireccionByCP/" + cp,
-                    type: "GET",
-                    dataType: "json",
-                    success: function (data) {
-
-                        console.log(data);
-
-                        if (data.objects.length > 0) {
-
-                            var direccion = data.objects[0];
-
-                            var idPais = direccion.Municipio.Estado.Pais.IdPais;
-                            var idEstado = direccion.Municipio.Estado.IdEstado;
-                            var idMunicipio = direccion.Municipio.IdMunicipio;
-
-                            $("#ddlpais").val(idPais).trigger("change");
-
-                            setTimeout(function () {
-
-                                $("#ddlestado").val(idEstado).trigger("change");
-
-                                setTimeout(function () {
-
-                                    $("#ddlmunicipio").val(idMunicipio);
-
-                                    $("#ddlcolonia").empty();
-                                    $("#ddlcolonia").append("<option value='0'>Selecciona colonia</option>");
-
-                                    $.each(data.objects, function (i, colonia) {
-                                        $("#ddlcolonia").append(
-                                            "<option value='" + colonia.IdColonia + "'>" + colonia.Nombre + "</option>"
-                                        );
-                                    });
-
-                                    cargandoDesdeCP = false; 
-
-                                }, 500);
-
-                            }, 500);
-                        }
-                    }
-                });
-            }
-        });
-    });
-
-</script>
 
 </html>
